Update For Delete and JavaFX runtime